<resources>
    <string name="app_name">Liga Chilena de Fútbol</string>
    <string name="escudo_local">Escudo local</string>
    <string name="escudo_visita">Escudo visita</string>
    <string name="partido">Partido</string>
    <string name="resultado_marcador">%1$s - %2$s</string>
    <string name="ciudad">Ciudad</string>
    <string name="estadio">Estadio</string>
    <string name="arbitro">Árbitro</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
</resources>
